# CMake-is-all-my-wants

./: README.md  tree.txt
cmake-template/: CMakeLists.txt
cmake-template/src/c/: cmake_template_version.h  cmake_template_version.h.in  main.c
cmake-template/src/c/math/: add.c  add.h  minus.c  minus.h
cmake-template/test/c/: test_add.cc  test_minus.cc
doc/: CMake.md
